--- a/index.html
+++ b/index.html
@@ -21,6 +21,58 @@
 
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
     <style>
+      body {
+        display: flex;
+        flex-direction: column;
+        background-color: hsl(212, 45%, 89%);
+        margin: 0px;
+        height: 100vh;
+      }
+      img {
+        border-radius: 10px;
+      }
+      .main-container {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+      }
+      .qr-code-container {
+        width: 320px;
+        height: 497px;
+        border-radius: 20px;
+        background-color: hsl(0, 0%, 100%);
+        text-align: center;
+        padding-top: 16px;
+        box-shadow: 0px 25px 25px 0px rgba(0, 0, 0, 0.05);
+      }
+      .para-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 16px;
+        margin-top: 24px;
+        font-family: Outfit;
+      }
+      .para-1 {
+        font-weight: 700;
+        color: hsl(218, 44%, 22%);
+        font-size: 22px;
+        width: 288px;
+        height: 56px;
+        margin: 0px;
+      }
+      .para-2 {
+        color: #7d889e;
+        font-size: 15px;
+        font-weight: 400;
+        width: 256px;
+        height: 57px;
+        margin: 0px;
+        letter-spacing: 0.188px;
+      }
       .attribution {
         font-size: 11px;
         text-align: center;
@@ -30,75 +82,15 @@
       }
     </style>
   </head>
-  <body
-    style="
-      display: flex;
-      flex-direction: column;
-      background-color: hsl(212, 45%, 89%);
-      margin: 0px;
-      height: 100vh;
-    "
-  >
-    <div
-      style="
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        height: 100vh;
-      "
-    >
-      <div
-        style="
-          width: 320px;
-          height: 497px;
-          border-radius: 20px;
-          background-color: hsl(0, 0%, 100%);
-          text-align: center;
-          padding-top: 16px;
-          box-shadow: 0px 25px 25px 0px rgba(0, 0, 0, 0.05);
-        "
-      >
-        <img
-          src="./images/image-qr-code.png"
-          style="border-radius: 10px"
-          width="288px"
-          height="288px"
-        />
-        <div
-          style="
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            gap: 16px;
-            margin-top: 24px;
-            font-family: Outfit;
-          "
-        >
-          <p
-            style="
-              font-weight: 700;
-              color: hsl(218, 44%, 22%);
-              font-size: 22px;
-              width: 288px;
-              height: 56px;
-              margin: 0px;
-            "
-          >
+  <body>
+    <div class="main-container">
+      <div class="qr-code-container">
+        <img src="./images/image-qr-code.png" width="288px" height="288px" />
+        <div class="para-container">
+          <p class="para-1">
             Improve your front-end skills by building projects
           </p>
-          <p
-            style="
-              color: #7d889e;
-              font-size: 15px;
-              font-weight: 400;
-              width: 256px;
-              height: 57px;
-              margin: 0px;
-              letter-spacing: 0.188px;
-            "
-          >
+          <p class="para-2">
             Scan the QR code to visit Frontend Mentor and take your coding
             skills to the next level
           </p>
@@ -109,7 +101,10 @@
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">Ravi Teja Natchireddi</a>.
+      >. Coded by
+      <a href="https://ravi-teja-natchireddi.netlify.app/" target="_blank"
+        >Ravi Teja Natchireddi</a
+      >.
     </div>
   </body>
 </html>
